@@ -1,21 +1,24 @@
 package it.polimi.ingsw.gc12.Model.Conditions;
 
 import com.google.gson.reflect.TypeToken;
-import it.polimi.ingsw.gc12.Model.Cards.GoldCard;
-import it.polimi.ingsw.gc12.Model.Cards.InitialCard;
-import it.polimi.ingsw.gc12.Model.Cards.ObjectiveCard;
-import it.polimi.ingsw.gc12.Model.Cards.ResourceCard;
+import it.polimi.ingsw.gc12.Model.Cards.*;
 import it.polimi.ingsw.gc12.Model.Game;
 import it.polimi.ingsw.gc12.Model.GameLobby;
+import it.polimi.ingsw.gc12.Model.InGamePlayer;
 import it.polimi.ingsw.gc12.Model.Player;
 import it.polimi.ingsw.gc12.Utilities.GenericPair;
 import it.polimi.ingsw.gc12.Utilities.JSONParser;
 import it.polimi.ingsw.gc12.Utilities.Side;
+import it.polimi.ingsw.gc12.Utilities.Triplet;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.ArrayList;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -51,97 +54,68 @@ class CornersConditionTest {
         corner = new CornersCondition();
     }
 
-
-    @Test
-    void numberOfTimesSatisfied_1() throws Throwable {
-
-        game.getPlayers().get(0).addCardToHand(initialCards.get(0));
-        game.getPlayers().get(0).placeCard(new GenericPair<>(0, 0), initialCards.get(0), Side.BACK);
-        assertEquals(0, corner.numberOfTimesSatisfied(initialCards.get(0), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(0));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(2));
-        game.getPlayers().get(0).placeCard(new GenericPair<>(1, -1), resourceCards.get(0), Side.FRONT);
-        game.getPlayers().get(0).placeCard(new GenericPair<>(-1, 1), resourceCards.get(2), Side.FRONT);
-
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(0), game.getPlayers().get(0)));
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(2), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(10));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(21));
-        game.getPlayers().get(0).placeCard(new GenericPair<>(2, 0), resourceCards.get(10), Side.FRONT);
-        game.getPlayers().get(0).placeCard(new GenericPair<>(-2, 2), resourceCards.get(21), Side.FRONT);
-
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(10), game.getPlayers().get(0)));
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(21), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).addCardToHand(goldCards.get(7));
-        game.getPlayers().get(0).addCardToHand(goldCards.get(6));
-        game.getPlayers().get(0).placeCard(new GenericPair<>(3, 1), goldCards.get(7), Side.FRONT);
-        game.getPlayers().get(0).placeCard(new GenericPair<>(-1, 3), goldCards.get(6), Side.FRONT);
-
-        assertEquals(1, corner.numberOfTimesSatisfied(goldCards.get(7), game.getPlayers().get(0)));
-        assertEquals(1, corner.numberOfTimesSatisfied(goldCards.get(6), game.getPlayers().get(0)));
-
-        // Final check for initial card
-        assertEquals(2, corner.numberOfTimesSatisfied(initialCards.get(0), game.getPlayers().get(0)));
+    static Stream<Arguments> provideMultiConditionParameters() {
+        return Stream.of(
+                /*
+                 * Generic Displacement Case
+                 */
+                Arguments.of(
+                        new int[]{0, 1, 1, 1, 1, 1, 1},
+                        new Triplet[]{
+                                new Triplet<>(new GenericPair<>(0, 0), initialCards.getFirst(), Side.BACK),
+                                new Triplet<>(new GenericPair<>(1, -1), resourceCards.get(0), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(-1, 1), resourceCards.get(2), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(2, 0), resourceCards.get(10), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(-2, 2), resourceCards.get(21), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(3, 1), resourceCards.get(7), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(-1, 3), resourceCards.get(6), Side.FRONT),
+                        }
+                ),
+                /*
+                 * Every Corner of Initial Card is Covered
+                 */
+                Arguments.of(
+                        new int[]{0, 1, 1, 2, 1},
+                        new Triplet[]{
+                                new Triplet<>(new GenericPair<>(0, 0), initialCards.getFirst(), Side.BACK),
+                                new Triplet<>(new GenericPair<>(1, 1), resourceCards.get(0), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(0, 2), resourceCards.get(2), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(-1, 1), resourceCards.get(1), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(-1, -1), resourceCards.get(3), Side.FRONT)
+                        }
+                ),
+                /*
+                 * Diamond Card Placement
+                 */
+                Arguments.of(
+                        new int[]{0, 1, 1, 1, 1},
+                        new Triplet[]{
+                                new Triplet<>(new GenericPair<>(0, 0), initialCards.getFirst(), Side.BACK),
+                                new Triplet<>(new GenericPair<>(1, 1), resourceCards.get(0), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(1, -1), resourceCards.get(1), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(-1, 1), resourceCards.get(2), Side.FRONT),
+                                new Triplet<>(new GenericPair<>(-1, -1), resourceCards.get(3), Side.FRONT)
+                        }
+                )
+        );
     }
 
-    @Test
-    void numberOfTimesSatisfied_2() throws Throwable {
+    @SafeVarargs
+    @ParameterizedTest
+    @MethodSource("provideMultiConditionParameters")
+    final void genericMultiCornersPatternTest(int[] numberOfTimesSatisfied,
+                                       Triplet<GenericPair<Integer, Integer>, PlayableCard, Side>... cardsToPlay)
+            throws Exception {
+        ObjectiveCard c_o = objectiveCards.getFirst();
 
-        game.getPlayers().get(0).addCardToHand(initialCards.get(0));
-        game.getPlayers().get(0).placeCard(new GenericPair<>(0, 0), game.getPlayers().get(0).getCardsInHand().getFirst(), Side.BACK);
-        assertEquals(0, corner.numberOfTimesSatisfied(initialCards.get(0), game.getPlayers().get(0)));
+        InGamePlayer player1InGame = game.getPlayers().getFirst();
 
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(0));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(1));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(2));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(3));
+        for (int i = 0; i < numberOfTimesSatisfied.length; i++){
+            Triplet<GenericPair<Integer, Integer>, PlayableCard, Side> cardPlacement = cardsToPlay[i];
+            player1InGame.addCardToHand(cardPlacement.getY());
+            player1InGame.placeCard(cardPlacement.getX(), cardPlacement.getY(), cardPlacement.getZ());
 
-        game.getPlayers().get(0).placeCard(new GenericPair<>(1, 1), resourceCards.get(0), Side.FRONT);
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(0), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).placeCard(new GenericPair<>(0, 2), resourceCards.get(2), Side.FRONT);
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(2), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).placeCard(new GenericPair<>(-1, 1), resourceCards.get(1), Side.FRONT);
-        assertEquals(2, corner.numberOfTimesSatisfied(resourceCards.get(1), game.getPlayers().get(0)));
-
-        // Semi-final check for initial card
-        assertEquals(2, corner.numberOfTimesSatisfied(initialCards.get(0), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).placeCard(new GenericPair<>(-1, -1), resourceCards.get(3), Side.FRONT);
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(3), game.getPlayers().get(0)));
-
-        // Final check for initial card
-        assertEquals(3, corner.numberOfTimesSatisfied(initialCards.get(0), game.getPlayers().get(0)));
-    }
-
-    @Test
-    void numberOfTimesSatisfied_3() throws Throwable {
-
-        game.getPlayers().get(0).addCardToHand(initialCards.get(0));
-        game.getPlayers().get(0).placeCard(new GenericPair<>(0, 0), game.getPlayers().get(0).getCardsInHand().getFirst(), Side.BACK);
-
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(0));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(1));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(2));
-        game.getPlayers().get(0).addCardToHand(resourceCards.get(3));
-
-        game.getPlayers().get(0).placeCard(new GenericPair<>(1, 1), resourceCards.get(0), Side.FRONT);
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(0), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).placeCard(new GenericPair<>(1, -1), resourceCards.get(1), Side.FRONT);
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(1), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).placeCard(new GenericPair<>(-1, 1), resourceCards.get(2), Side.FRONT);
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(2), game.getPlayers().get(0)));
-
-        game.getPlayers().get(0).placeCard(new GenericPair<>(-1, -1), resourceCards.get(3), Side.FRONT);
-        assertEquals(1, corner.numberOfTimesSatisfied(resourceCards.get(1), game.getPlayers().get(0)));
-
-        // Final check for initial card
-        assertEquals(4, corner.numberOfTimesSatisfied(initialCards.get(0), game.getPlayers().get(0)));
+            assertEquals(numberOfTimesSatisfied[i], corner.numberOfTimesSatisfied(cardsToPlay[i].getY(), game.getPlayers().getFirst()));
+        }
     }
 }
